syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 155
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message PlayerGameTimeNotify {
	uint32 game_time = 7;
	uint32 uid = 13;
	bool is_home = 12;
}
