syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 262
// EnetChannelId: 0
// EnetIsReliable: true
message SceneTimeNotify {
	uint32 scene_id = 3;
	bool is_paused = 5;
	uint64 scene_time = 14;
}
